# Nymphalidae

./: Kittens.py  README.md  dependencies.py  setup.cfg
Apatura/: Iris.py
Danaus/: FCMulti.py  Plexippus.py
Nymphalidae/: ConvMulti.py
tools/: FastTensorDataLoader.py
