[metadata]
name = Rhopalocera-SophieD517
version = 0.0.1
author = Sophie
author_email = 
description = all things multitask learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SophieD517/Rhopalocera/
project_urls =
    Bug Tracker = https://github.com/SophieD517/Rhopalocera/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
